Added certain dependencies, and made calendar adjustments.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -7,24 +7,24 @@
 - week: 2
   dates: "TBD"
   topic: "Lesson Design Workshop"
-  notes: "Presentation skills (Optional session)."
+  notes: "Presentation skills, group assignments."
   due: "Form groups for lessons."
 
 - week: 3
   dates: "TBD"
-  topic: "Outreach Prep & Safety"
-  notes: "Start attending outreach events."
+  topic: "Lesson Design Workshop"
+  notes: "Continue work on lessons, begin outreach prep."
   due: "-"
 
 - week: 4
   dates: "TBD"
-  topic: "Mid-quarter Check-in"
-  notes: "-"
+  topic: "Lesson Design Workshop"
+  notes: "Continue work on lessons, begin prep for Lesson Dry-Runs."
   due: "Mandated Reporter Training Certificate"
 
 - week: 5
   dates: "TBD"
-  topic: "Weekly Meeting / Outreach"
+  topic: "Lesson Dry-Run, Outreach Schedule Overview"
   notes: "Ensure you are on track for 5 event minimum."
   due: "-"
 
@@ -55,5 +55,5 @@
 - week: 10
   dates: "TBD"
   topic: "Final Presentations"
-  notes: "3-minute individual presentations."
+  notes: "MANDATORY ATTENDANCE.3-minute individual presentations."
   due: "Final Report / Presentation Slides"
