--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ defaults:
       layout: "default"
 
 # Callouts
+color_scheme: light
 remote_theme: just-the-docs/just-the-docs@v0.5.4
 
 callouts_level: loud  # loud = shaded box, quiet = subtle
