--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,10 @@ defaults:
       path: ""
     values:
       layout: "default"
+  - scope:
+      path: "assets"
+    values:
+      layout: null
 
 # Callouts
 color_scheme: light
