--- a/_data/deadlines.yml
+++ b/_data/deadlines.yml
@@ -1,23 +1,23 @@
 - deliverable: "Mandated Reporter Training (CANRA + Abuse Risk Mgmt)"
-  deadline: "Week 4"
-  notes: "Submit certificate or screenshot to staff."
+  deadline: "End of Week 4"
+  notes: "Submit BOTH your CANRA and Abuse Risk Management certificates to the submission folder."
 
 - deliverable: "Lesson Content Quiz"
-  deadline: "1 day before your scheduled lesson"
-  notes: "Required to get a ride. Lesson finalized 2 days prior."
+  deadline: "End of Week 5"
+  notes: "Should be completed at the same time as your lesson dry run."
 
 - deliverable: "Post-Lesson Feedback Form"
-  deadline: "Within 24 hours of event"
+  deadline: "Within 24 hours of each attended event."
   notes: "Required for every event attended."
 
 - deliverable: "Reflections (2 Total)"
   deadline: "End of Quarter (Rolling)"
-  notes: "1-2 pages each, based on CSE lessons attended. Must include pedagogy research."
+  notes: "1-2 pages each, based on CSE lessons attended. Please include pedagogy research."
 
 - deliverable: "Final Presentation"
   deadline: "Week 10 Meeting"
-  notes: "2-3 minutes, individual."
+  notes: "2-3 minutes, individual. Please submit your slides to the submission folder."
 
-- deliverable: "Outreach Minimums"
+- deliverable: "Outreach Event Minimums"
   deadline: "End of Quarter"
-  notes: "5 total events. Min 2 CSE lessons."
+  notes: "5 total events. Minimum of 2 CSE lessons. Any combination of CSE and MAE/ECE lessons will count towards the 5 total events."
