--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,59 +1,59 @@
 - week: 1
-  dates: "TBD"
+  dates: "Asynchronous"
   topic: "Introduction & Logistics"
   notes: "Sign up for Discord, HKN Portal account."
   due: "Initial Survey (if applicable)"
 
 - week: 2
-  dates: "TBD"
+  dates: "Thurs/Fri, January 15/16, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Presentation skills, group assignments."
   due: "Form groups for lessons."
 
 - week: 3
-  dates: "TBD"
+  dates: "Thurs/Fri, January 22/23, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin outreach prep."
   due: "-"
 
 - week: 4
-  dates: "TBD"
+  dates: "Thurs/Fri, January 29/30, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin prep for Lesson Dry-Runs."
   due: "Mandated Reporter Training Certificate"
 
 - week: 5
-  dates: "TBD"
+  dates: "Thurs/Fri, February 5/6, 5:00 PM - 6:00 PM"
   topic: "Lesson Dry-Run, Outreach Schedule Overview"
   notes: "Ensure you are on track for 5 event minimum."
   due: "-"
 
 - week: 6
-  dates: "TBD"
+  dates: "Thurs/Fri, February 12/13, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "Reflections (ongoing)"
 
 - week: 7
-  dates: "TBD"
+  dates: "Thurs/Fri, February 19/20, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "-"
 
 - week: 8
-  dates: "TBD"
+  dates: "Thurs/Fri, February 26/27, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "Draft of Final Presentation (Optional review)"
 
 - week: 9
-  dates: "TBD"
+  dates: "Thurs/Fri, March 5/6, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "Last week for regular outreach."
   due: "All Reflections & Feedback Forms due soon."
 
 - week: 10
-  dates: "TBD"
+  dates: "Thurs/Fri, March 12/13, 5:00 PM - 6:00 PM"
   topic: "Final Presentations"
   notes: "MANDATORY ATTENDANCE.3-minute individual presentations."
   due: "Final Report / Presentation Slides"
