Added slides box in Weekly Schedule.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -3,57 +3,67 @@
   topic: "Introduction & Logistics"
   notes: "Sign up for Discord, HKN Portal account."
   due: "Initial Survey (if applicable)"
+  slides: ""
 
 - week: 2
   dates: "Thurs/Fri, January 15/16, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Presentation skills, group assignments."
   due: "Form groups for lessons."
+  slides: ""
 
 - week: 3
   dates: "Thurs/Fri, January 22/23, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin outreach prep."
   due: "-"
+  slides: ""
 
 - week: 4
   dates: "Thurs/Fri, January 29/30, 5:00 PM - 6:00 PM"
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin prep for Lesson Dry-Runs."
   due: "Mandated Reporter Training Certificate"
+  slides: ""
 
 - week: 5
   dates: "Thurs/Fri, February 5/6, 5:00 PM - 6:00 PM"
   topic: "Lesson Dry-Run, Outreach Schedule Overview"
   notes: "Ensure you are on track for 5 event minimum."
   due: "-"
+  slides: ""
 
 - week: 6
   dates: "Thurs/Fri, February 12/13, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "Reflections (ongoing)"
+  slides: ""
 
 - week: 7
   dates: "Thurs/Fri, February 19/20, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "-"
+  slides: ""
 
 - week: 8
   dates: "Thurs/Fri, February 26/27, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "-"
   due: "Draft of Final Presentation (Optional review)"
+  slides: ""
 
 - week: 9
   dates: "Thurs/Fri, March 5/6, 5:00 PM - 6:00 PM"
   topic: "Weekly Meeting / Outreach"
   notes: "Last week for regular outreach."
   due: "All Reflections & Feedback Forms due soon."
+  slides: ""
 
 - week: 10
   dates: "Thurs/Fri, March 12/13, 5:00 PM - 6:00 PM"
   topic: "Final Presentations"
   notes: "MANDATORY ATTENDANCE.3-minute individual presentations."
   due: "Final Report / Presentation Slides"
+  slides: ""
