Added Week 2 slides, and modified slides linker.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -10,7 +10,7 @@
   topic: "Lesson Design Workshop"
   notes: "Presentation skills, group assignments."
   due: "Form groups for lessons."
-  slides: ""
+  slides: "[Week 2 Slides](/cse198-wi26/assets/files/Week2_CSE198_WI26.pdf)"
 
 - week: 3
   dates: "Thurs/Fri, January 22/23, 5:00 PM - 6:00 PM"
