Added Week 3 Slides

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -17,7 +17,7 @@
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin outreach prep."
   due: "-"
-  slides: ""
+  slides: "[Week 3 Slides](/cse198-wi26/assets/files/Week3_CSE198_WI26.pdf)"
 
 - week: 4
   dates: "Thurs/Fri, January 29/30, 5:00 PM - 6:00 PM"
