Added Week 4 Slides!

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -24,7 +24,7 @@
   topic: "Lesson Design Workshop"
   notes: "Continue work on lessons, begin prep for Lesson Dry-Runs."
   due: "Mandated Reporter Training Certificate"
-  slides: ""
+  slides: "[Week 4 Slides](/cse198-wi26/assets/files/Week4_CSE198_WI26.pdf)"
 
 - week: 5
   dates: "Thurs/Fri, February 5/6, 5:00 PM - 6:00 PM"
