Added Week 5 lecture slides.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -31,7 +31,7 @@
   topic: "Lesson Dry-Run, Outreach Schedule Overview"
   notes: "Ensure you are on track for 5 event minimum."
   due: "-"
-  slides: ""
+  slides: "[Week 5 Slides](/cse198-wi26/assets/files/Week5_CSE198_WI26.pdf)"
 
 - week: 6
   dates: "Thurs/Fri, February 12/13, 5:00 PM - 6:00 PM"
